ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /caption
        backend:
          service:
            name: caption
            port:
              number: 8000
      - pathType: Prefix
        path: /gallery
        backend:
          service:
            name: gallery
            port:
              number: 8080
      - pathType: Prefix
        path: /users
        backend:
          service:
            name: users
            port:
              number: 9000
      - pathType: Prefix
        path: /webapp
        backend:
          service:
            name: webapp
            port:
              number: 80
